--- a/appdevelop.html
+++ b/appdevelop.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Mobile Application Development Services | Digital Minds On</title>
+    <title>Mobile Application Development Services | Web & Mobile Apps | Digital Minds On</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -311,19 +311,24 @@
                     <div class="col-xl-12">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">Application Development</h2>
+                                <h2 class="heading">Mobile App Development Services</h2>
                             </div>
                             <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;">Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing elit. Nullam tincidunt sem ut
-                                    efficitur finibus. Nulla bibendum, mauris a iaculis tincidunt, dolor ligula varius
-                                    nibh, ut lacinia sem ligula id velit. Nulla scelerisque, magna mollis aliquam
-                                    aliquet, lacus risus interdum orci, lobortis maximus neque orci sit amet mauris.</p>
+                                <p class="banner-width" style="max-width: 750px;"> Digital Minds On provides
+                                    comprehensive mobile development services, from initial ideation and app design to
+                                    project launch and ongoing support. Our team is dedicated to helping businesses
+                                    harness the power of mobile technologies to enhance operational efficiency, elevate
+                                    customer experiences, and deliver top-tier service quality. With a focus on
+                                    innovation and user-centric design, Digital Minds On ensures your mobile solutions
+                                    align perfectly with your business goals. Whether you’re launching a new app or
+                                    optimizing an existing one, our expertise guarantees a seamless journey from concept
+                                    to success. Partner with Digital Minds On to transform your vision into impactful
+                                    mobile solutions. </p>
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
                                     <a class="default__button" href="#">GET FREE QUATE</a>
-                                    <a class="default__button" href="#">GET FREE QUATE</a>
+                                    <a class="default__button" href="#">Contact Us</a>
                                 </ul>
                             </div>
                         </div>
