--- a/project-details.html
+++ b/project-details.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Project-Details| Digital Minds On- Business Consulting HTML Template</title>
+    <title>All Projects| Digital Minds On</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -299,13 +299,13 @@
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">Project Details </h2>
+                                <h2 class="heading">Digital Minds On All Project </h2>
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
                                     <li>// </li>
-                                    <li> Project-details </li>
+                                    <li> Project </li>
                                 </ul>
                             </div>
                         </div>
@@ -424,14 +424,14 @@
                                         <div class="tab-pane fade active show" id="projects__one" role="tabpanel"
                                             aria-labelledby="projects__one">
                                             <div class="projects__img">
-                                                <img src="assets/img/project/project__11.png" alt="">
+                                                <img src="assets/img/project/1.1.webp" alt="">
                                             </div>
                                         </div>
 
                                         <div class="tab-pane fade" id="projects__two" role="tabpanel"
                                             aria-labelledby="projects__two">
                                             <div class="projects__img">
-                                                <img src="assets/img/project/project__12.png" alt="">
+                                                <img src="assets/img/project/1.2.webp" alt="">
                                             </div>
 
                                         </div>
@@ -439,7 +439,7 @@
                                         <div class="tab-pane fade" id="projects__three" role="tabpanel"
                                             aria-labelledby="projects__three">
                                             <div class="projects__img">
-                                                <img src="assets/img/project/project__13.png" alt="">
+                                                <img src="assets/img/project/1.3.webp" alt="">
                                             </div>
                                         </div>
 
@@ -453,19 +453,19 @@
                                                 <li class="nav-item" role="presentation">
                                                     <a href="#" class="projects__tab__link active" data-bs-toggle="tab"
                                                         data-bs-target="#projects__one"><img
-                                                            src="assets/img/project/project__11.png"
+                                                            src="assets/img/project/1.4.webp"
                                                             alt="projectsimg"></a>
                                                 </li>
                                                 <li class="nav-item" role="presentation">
                                                     <a href="#" class="projects__tab__link" data-bs-toggle="tab"
                                                         data-bs-target="#projects__two"><img
-                                                            src="assets/img/project/project__12.png"
+                                                            src="assets/img/project/1.5.webp"
                                                             alt="projectsimg"></a>
                                                 </li>
                                                 <li class="nav-item" role="presentation">
                                                     <a href="#" class="projects__tab__link" data-bs-toggle="tab"
                                                         data-bs-target="#projects__three"><img
-                                                            src="assets/img/project/project__13.png"
+                                                            src="assets/img/project/1.3.webp"
                                                             alt="projectsimg"></a>
                                                 </li>
 
