--- a/software.html
+++ b/software.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Software Development | Digital MInds On</title>
-    <meta name="description" content="">
+    <title>Custom Software Development Services | Digital MInds On</title>
+    <meta name="description" content="Software development involves designing, creating, testing, and deploying software to meet user needs. It goes beyond coding to include planning, analysis, and management.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
@@ -305,7 +305,7 @@
                     <div class="col-xl-12">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">Service Page</h2>
+                                <h2 class="heading">Custom Software Development Services</h2>
                             </div>
                             <div class="breadcrumbarea___para">
                                 <p class="banner-width" style="max-width: 750px;">Digital Minds On is a Software
