--- a/uidesign.html
+++ b/uidesign.html
@@ -5,8 +5,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>UI/UX Design | Digital Minds On</title>
-    <meta name="description" content="">
+    <title>UI/UX Design | Web Mobile Applications | Digital Minds On</title>
+    <meta name="description"
+        content="Discover essential UX/UI principles for modern mobile apps, focusing on intuitive design, user experience, and seamless functionality to captivate users">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
@@ -305,19 +306,23 @@
                     <div class="col-xl-12">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">Graphic Design</h2>
+                                <h2 class="heading">UX/UI Design Principles in Modern Mobile Applications</h2>
                             </div>
                             <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;">Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing elit. Nullam tincidunt sem ut
-                                    efficitur finibus. Nulla bibendum, mauris a iaculis tincidunt, dolor ligula varius
-                                    nibh, ut lacinia sem ligula id velit. Nulla scelerisque, magna mollis aliquam
-                                    aliquet, lacus risus interdum orci, lobortis maximus neque orci sit amet mauris.</p>
+                                <p class="banner-width" style="max-width: 750px;">Transform your ideas into seamless
+                                    user experiences with Digital Minds On. Our expert team of 150+ design consultants,
+                                    UX/UI specialists, researchers, and design engineers bring over 20 years of industry
+                                    expertise to the table. At Digital Minds On, we blend innovation and precision to
+                                    craft intuitive designs that captivate users and drive success across various
+                                    industries. Whether you're looking to enhance functionality or create an engaging
+                                    interface, our seasoned professionals are here to deliver results. Partner with us
+                                    to turn your vision into a reality, and let our proven experience shape the future
+                                    of your digital projects.</p>
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
                                     <a class="default__button" href="#">GET FREE QUATE</a>
-                                    <a class="default__button" href="#">GET FREE QUATE</a>
+                                    <a class="default__button" href="#">Contact Us</a>
                                 </ul>
                             </div>
                         </div>
@@ -478,7 +483,7 @@
                     <div class="col-xl-8 col-lg-8 col-md-12 col-12">
                         <div class="service__details__wraper">
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Management Consulting</h4>
+                                <h4>Affordable UX/UI Design Service</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p>Digital Minds On is the best UX design agency because it fully comprehends the fact
