--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -307,21 +307,24 @@
                         <div class="col-xl-12">
                             <div class="breadcrumbarea__content__wraper">
                                 <div class="breadcrumbarea__title">
-                                    <h2 class="heading">Webdevelopment Services</h2>
+                                    <h2 class="heading">Web Development Services</h2>
                                 </div>
                                 <div class="breadcrumbarea___para">
-                                    <p class="banner-width" style="max-width: 750px;">Lorem ipsum dolor sit amet,
-                                        consectetur adipiscing elit. Nullam tincidunt sem ut
-                                        efficitur finibus. Nulla bibendum, mauris a iaculis tincidunt, dolor ligula
-                                        varius
-                                        nibh, ut lacinia sem ligula id velit. Nulla scelerisque, magna mollis aliquam
-                                        aliquet, lacus risus interdum orci, lobortis maximus neque orci sit amet mauris.
-                                    </p>
+                                    <p class="banner-width" style="max-width: 750px;"> Partner with Digital Minds On, a
+                                        top-rated custom web development company, to build a high-performance website
+                                        that delivers exceptional results. From creating engaging corporate sites to
+                                        developing complex animations, we specialize in crafting digital experiences
+                                        that captivate users and drive success. Our services include custom UX & UI
+                                        design, tailored to enhance user satisfaction, as well as search and conversion
+                                        optimization to maximize your site's performance. With end-to-end development,
+                                        we ensure seamless integration and functionality across all platforms. Trust
+                                        Digital Minds On to bring your vision to life and create a website that stands
+                                        out in today's competitive digital landscape. </p>
                                 </div>
                                 <div class="banner-button">
                                     <ul class="common-button">
                                         <a class="default__button" href="#">GET FREE QUATE</a>
-                                        <a class="default__button" href="#">GET FREE QUATE</a>
+                                        <a class="default__button" href="#">Contact Us</a>
                                     </ul>
                                 </div>
                             </div>
