--- a/index.html
+++ b/index.html
@@ -1488,8 +1488,7 @@
                                     <img src="assets/img/logo/full-logo.svg" alt="">
                                 </div>
                                 <div class="footer__text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                        incididunt labore et dolore magna aliqua</p>
+                                    <p>Trusted software, web, and app development company delivering innovative solutions to empower businesses with cutting-edge technology.</p>
                                 </div>
                                 <div class="footer__icon">
                                     <ul>
