--- a/blog.html
+++ b/blog.html
@@ -130,7 +130,12 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="index.html"><img src="assets/img/logo/full-logo.svg" alt="Bastun Logo"></a>
+                                    <a href="index.html">
+                                        <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
+                                            class="dark-mode">
+                                        <img src="assets/img/logo/header/logo-local-host new.svg"
+                                            alt="Digitalminds-logo" class="light-mode">
+                                    </a>
                                 </div>
                             </div>
                             <div class="headerarea__component">
@@ -190,7 +195,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
 
-                                   
+
                                     <div class="headerarea__button">
                                         <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
@@ -235,7 +240,8 @@
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
                     <a class="offcanvas__logo_link" href="index.html">
-                        <img src="assets/img/logo/icon.svg" alt="Logo-img">
+                        <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
+                        <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo" class="light-mode">
                     </a>
                     <button class="offcanvas__close--btn" data-offcanvas>Close</button>
                 </div>
