--- a/project-details.html
+++ b/project-details.html
@@ -128,7 +128,12 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="index.html"><img src="assets/img/logo/full-logo.svg" alt="Bastun Logo"></a>
+                                    <a href="index.html">
+                                        <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
+                                            class="dark-mode">
+                                        <img src="assets/img/logo/header/logo-local-host new.svg"
+                                            alt="Digitalminds-logo" class="light-mode">
+                                    </a>
                                 </div>
                             </div>
                             <div class="headerarea__component">
@@ -233,7 +238,9 @@
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
                     <a class="offcanvas__logo_link" href="index.html">
-                        <img src="assets/img/logo/icon.svg" alt="Logo-img">
+                        <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
+                        <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
+                            class="light-mode">
                     </a>
                     <button class="offcanvas__close--btn" data-offcanvas>Close</button>
                 </div>
@@ -453,20 +460,17 @@
                                                 <li class="nav-item" role="presentation">
                                                     <a href="#" class="projects__tab__link active" data-bs-toggle="tab"
                                                         data-bs-target="#projects__one"><img
-                                                            src="assets/img/project/1.4.webp"
-                                                            alt="projectsimg"></a>
+                                                            src="assets/img/project/1.4.webp" alt="projectsimg"></a>
                                                 </li>
                                                 <li class="nav-item" role="presentation">
                                                     <a href="#" class="projects__tab__link" data-bs-toggle="tab"
                                                         data-bs-target="#projects__two"><img
-                                                            src="assets/img/project/1.5.webp"
-                                                            alt="projectsimg"></a>
+                                                            src="assets/img/project/1.5.webp" alt="projectsimg"></a>
                                                 </li>
                                                 <li class="nav-item" role="presentation">
                                                     <a href="#" class="projects__tab__link" data-bs-toggle="tab"
                                                         data-bs-target="#projects__three"><img
-                                                            src="assets/img/project/1.3.webp"
-                                                            alt="projectsimg"></a>
+                                                            src="assets/img/project/1.3.webp" alt="projectsimg"></a>
                                                 </li>
 
 
