--- a/service-details.html
+++ b/service-details.html
@@ -128,7 +128,12 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="index.html"><img src="assets/img/logo/full-logo.svg" alt="Bastun Logo"></a>
+                                    <a href="index.html">
+                                        <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
+                                            class="dark-mode">
+                                        <img src="assets/img/logo/header/logo-local-host new.svg"
+                                            alt="Digitalminds-logo" class="light-mode">
+                                    </a>
                                 </div>
                             </div>
                             <div class="headerarea__component">
@@ -146,7 +151,7 @@
                                             <li class="headerarea__common__dropdown"><a
                                                     class="headerarea__has__dropdown" href="service.html">Services
                                                     <i class="icofont-long-arrow-down"></i></a>
-                                                    <ul
+                                                <ul
                                                     class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
 
                                                     <li><a href="webdevelopment.html">Web Development</a></li>
@@ -188,7 +193,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
 
-                                  
+
                                     <div class="headerarea__button">
                                         <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
@@ -233,7 +238,9 @@
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
                     <a class="offcanvas__logo_link" href="index.html">
-                        <img src="assets/img/logo/icon.svg" alt="Logo-img">
+                        <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
+                        <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
+                            class="light-mode">
                     </a>
                     <button class="offcanvas__close--btn" data-offcanvas>Close</button>
                 </div>
@@ -557,8 +564,7 @@
                         <a href="index.html">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                            <img class="bbb__icon" src="assets/img/logo/logo/icon.svg"
-                                alt="Footer icon badge">
+                            <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
                         </a>
                     </div>
                 </div>
