--- a/software.html
+++ b/software.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Custom Software Development Services | Digital MInds On</title>
-    <meta name="description" content="Software development involves designing, creating, testing, and deploying software to meet user needs. It goes beyond coding to include planning, analysis, and management.">
+    <meta name="description"
+        content="Software development involves designing, creating, testing, and deploying software to meet user needs. It goes beyond coding to include planning, analysis, and management.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
@@ -129,7 +130,12 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="index.html"><img src="assets/img/logo/full-logo.svg" alt="Bastun Logo"></a>
+                                    <a href="index.html">
+                                        <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
+                                            class="dark-mode">
+                                        <img src="assets/img/logo/header/logo-local-host new.svg"
+                                            alt="Digitalminds-logo" class="light-mode">
+                                    </a>
                                 </div>
                             </div>
                             <div class="headerarea__component">
@@ -234,7 +240,9 @@
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
                     <a class="offcanvas__logo_link" href="index.html">
-                        <img src="assets/img/logo/icon.svg" alt="Logo-img">
+                        <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
+                        <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
+                            class="light-mode">
                     </a>
                     <button class="offcanvas__close--btn" data-offcanvas>Close</button>
                 </div>
