review add star

--- a/index.html
+++ b/index.html
@@ -1178,6 +1178,13 @@
                             <div class="testimonial__slider__active swiper">
                                 <div class="swiper-wrapper">
                                     <div class="testimonial__single__slider swiper-slide">
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
                                         <div class="testimonial__text">
                                             <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                                                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -1197,6 +1204,13 @@
                                         </div>
                                     </div>
                                     <div class="testimonial__single__slider swiper-slide">
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
                                         <div class="testimonial__text">
                                             <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                                                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -1215,6 +1229,13 @@
                                         </div>
                                     </div>
                                     <div class="testimonial__single__slider swiper-slide">
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
                                         <div class="testimonial__text">
                                             <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                                                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
