--- a/index.html
+++ b/index.html
@@ -158,8 +158,10 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
                                     <a href="index.html">
-                                        <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
-                                        <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo" class="light-mode">
+                                        <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
+                                            class="dark-mode">
+                                        <img src="assets/img/logo/header/logo-local-host new.svg"
+                                            alt="Digitalminds-logo" class="light-mode">
                                     </a>
                                 </div>
                             </div>
@@ -262,7 +264,8 @@
                 <div class="offcanvas__logo">
                     <a class="offcanvas__logo_link" href="index.html">
                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
-                        <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo" class="light-mode">
+                        <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
+                            class="light-mode">
                     </a>
                     <button class="offcanvas__close--btn" data-offcanvas>Close</button>
                 </div>
@@ -1637,68 +1640,3 @@
 </body>
 
 </html>
-
-
-
-<div class="offcanvas__header">
-    <div class="offcanvas__inner">
-        <div class="offcanvas__logo">
-            <a class="offcanvas__logo_link" href="index.html">
-                <img src="assets/img/logo/Logo_2.png" alt="Logo-img">
-            </a>
-            <button class="offcanvas__close--btn" data-offcanvas="">Close</button>
-        </div>
-        <nav class="offcanvas__menu">
-            <ul class="offcanvas__menu_ul">
-                <li class="offcanvas__menu_li">
-                    <a class="offcanvas__menu_item" href="index.html">Home</a>
-                    <button class="offcanvas__sub_menu_toggle"></button>
-                </li>
-                <li class="offcanvas__menu_li">
-                    <a class="offcanvas__menu_item" href="#">Pages</a>
-                    <ul class="offcanvas__sub_menu">
-                        <li class="offcanvas__sub_menu_li"><a href="blog.html" class="offcanvas__sub_menu_item">Blog</a>
-                        </li>
-                        <li class="offcanvas__sub_menu_li"><a href="blog-details.html"
-                                class="offcanvas__sub_menu_item">Blog Details</a></li>
-                        <li class="offcanvas__sub_menu_li"><a href="project.html"
-                                class="offcanvas__sub_menu_item">Projects</a></li>
-                        <li class="offcanvas__sub_menu_li"><a href="project-details.html"
-                                class="offcanvas__sub_menu_item">Project Details</a></li>
-                    </ul>
-                    <button class="offcanvas__sub_menu_toggle"></button>
-                </li>
-                <li class="offcanvas__menu_li">
-                    <a class="offcanvas__menu_item" href="service.html">Services</a>
-                    <ul class="offcanvas__sub_menu">
-                        <li class="offcanvas__sub_menu_li"><a href="webdevelopment.html"
-                                class="offcanvas__sub_menu_item">webdevelopment.html</a></li>
-                        <li class="offcanvas__sub_menu_li"><a href="software.html"
-                                class="offcanvas__sub_menu_item">Software Development</a></li>
-                        <li class="offcanvas__sub_menu_li"><a href="appdevelop.html"
-                                class="offcanvas__sub_menu_item">App Development</a></li>
-                        <li class="offcanvas__sub_menu_li"><a href="GameDevelop.html"
-                                class="offcanvas__sub_menu_item">Game Development</a></li>
-                        <li class="offcanvas__sub_menu_li"><a href="digtalmarketing.html"
-                                class="offcanvas__sub_menu_item">Digtal Marketing</a></li>
-                        <li class="offcanvas__sub_menu_li"><a href="uidesign.html"
-                                class="offcanvas__sub_menu_item">UI/UX Designer</a></li>
-                        <li class="offcanvas__sub_menu_li"><a href="itexpert.html" class="offcanvas__sub_menu_item">IT
-                                Specialist</a></li>
-                        <li class="offcanvas__sub_menu_li"><a href="wordpress.html"
-                                class="offcanvas__sub_menu_item">WordPress Development</a></li>
-                        <li class="offcanvas__sub_menu_li"><a href="Content_Creater.html"
-                                class="offcanvas__sub_menu_item">Content Creater</a></li>
-                        <li class="offcanvas__sub_menu_li"><a href="seo.html" class="offcanvas__sub_menu_item">Search
-                                Engine Optimization(SEO)</a></li>
-                    </ul>
-                    <button class="offcanvas__sub_menu_toggle"></button>
-                </li>
-                <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="about.html">About</a></li>
-                <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="contact.html">Contact</a>
-                </li>
-            </ul>
-
-        </nav>
-    </div>
-</div>
