--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
                             data-aos-duration="1500">
                             <div class="project__single single__transform">
                                 <div class="project__img">
-                                    <img src="assets/img/project/project__2.png" alt="">
+                                    <img src="assets/img/project/project__2.webp" alt="">
                                 </div>
 
                             </div>
